--- a/website/src/pages/Contact.css
+++ b/website/src/pages/Contact.css
@@ -22,7 +22,7 @@
     }
   
     .contact-form-container {
-      width: 100% !important;
+      width: 80% !important;
       padding: 0 1rem;
     }
   
